--- a/docs/_updates/2018-10-03-Bio.md
+++ b/docs/_updates/2018-10-03-Bio.md
@@ -1,9 +1,11 @@
 ---
 title: Bio-DB-HTS
-catagory: bio 
-homepage: https://metacpan.org/release/Bio-DB-HTS
 ---
 Perl library for reading files using HTSlib including BAM/CRAM, Tabix and BCF database files
+
+Project Homepage: [Bio-DB-HTS](https://metacpan.org/release/Bio-DB-HTS)
+
+Usage:
 ```
 module load Bio/DB-HTS-2.11-foss-2016b-Perl-5.24.0
 ```
