--- a/docs/_updates/2018-10-09-BLAST+.md
+++ b/docs/_updates/2018-10-09-BLAST+.md
@@ -1,9 +1,11 @@
 ---
 title: BLAST+
-catagory: bio 
-homepage: http://blast.ncbi.nlm.nih.gov/
 ---
 Basic Local Alignment Search Tool, or BLAST, is an algorithm for comparing primary biological sequence information, such as the amino-acid sequences of different proteins or the nucleotides of DNA sequences.
+
+Project Homepage: [BLAST+](http://blast.ncbi.nlm.nih.gov/)
+
+Usage:
 ```
 module load BLAST+/2.7.1-foss-2018b
 ```
